Increased test coverage, added bug fixes